--- a/restaurant-service.properties
+++ b/restaurant-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=restaurant-service
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant_db
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurantdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
