--- a/customer-service.properties
+++ b/customer-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=customer-service
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customer_db
+spring.datasource.url=jdbc:mysql://localhost:3306/customerdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
