--- a/order-service.properties
+++ b/order-service.properties
@@ -1,7 +1,7 @@
 spring.application.name=order-service
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3306/order_db
+spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
